fixing map and aligning the night mode with menu button

--- a/app/globals.css
+++ b/app/globals.css
@@ -297,12 +297,6 @@ p {
     display: none !important;
   }
 
-  #theme_toggle {
-    bottom: 1rem !important;
-    left: 1.25rem !important;
-    transform: none !important;
-  }
-
   #hud {
     bottom: 1rem !important;
     right: 1.25rem !important;
